# Telemetry_and_Logging-System

./: How_TO_Build_Run.md  README.md  commands
config/: app_config.json  commonapi.ini  vsomeip-client.json  vsomeip-local.json  vsomeip-server.json
docs/: phase1_readme.md  phase2_readme.md  phase3_readme.md  phase4_readme.md  phase5_readme.md  phase6_readme.md
examples/: CMakeLists.txt  phase1_demo.cpp  phase2_demo.cpp  phase3_demo.cpp  phase4_demo.cpp  phase5_client_demo.cpp  phase6_demo.cpp
fidl/: TelemetryService.fdepl  TelemetryService.fidl
fidl/src-gen/v1/log/: TelemetryService.hpp  TelemetryServiceProxy.hpp  TelemetryServiceProxyBase.hpp  TelemetryServiceSomeIPCatalog.json  TelemetryServiceSomeIPDeployment.cpp  TelemetryServiceSomeIPDeployment.hpp  TelemetryServiceSomeIPProxy.cpp  TelemetryServiceSomeIPProxy.hpp  TelemetryServiceSomeIPStubAdapter.cpp  TelemetryServiceSomeIPStubAdapter.hpp  TelemetryServiceStub.hpp  TelemetryServiceStubDefault.hpp
gui/: CMakeLists.txt  main.cpp
gui/include/: ConfigDialog.hpp  DashboardWidget.hpp  LogViewerWidget.hpp  MainWindow.hpp  SourceStatusWidget.hpp  TelemetryAppController.hpp  TelemetryChartWidget.hpp  TelemetryGaugeWidget.hpp
gui/resources/: resources.qrc
gui/resources/styles/: dark_theme.qss
gui/src/: ConfigDialog.cpp  DashboardWidget.cpp  LogViewerWidget.cpp  MainWindow.cpp  SourceStatusWidget.cpp  TelemetryAppController.cpp  TelemetryChartWidget.cpp  TelemetryGaugeWidget.cpp
include/app/: AppConfig.hpp  TelemetryApp.hpp
include/core/: ILogSink.hpp  LogManager.hpp  LogMessage.hpp
include/enums/: LogSinkType.hpp  SinksType.hpp  TelemetrySource.hpp
include/formatter/: LogFormatter.hpp  LogFormatterHelper.hpp
include/formatter/policies/: CpuPolicy.hpp  GpuPolicy.hpp  RamPolicy.hpp
include/logger/: LogManager.hpp  LogManagerBuilder.hpp  LogMessage.hpp
include/raii/: SafeFile.hpp  SafeSocket.hpp
include/services/: TelemetryServiceImpl.hpp
include/sinks/: ConsoleSinkImpl.hpp  FileSinkImpl.hpp  ILogSink.hpp  LogSinkFactory.hpp  SinkConfig.hpp
include/sources/: FileTelemetrySourceImpl.hpp  ITelemetrySource.hpp  SocketTelemetrySourceImpl.hpp  SomeIPTelemetrySourceAdapter.hpp  SomeIPTelemetrySourceImpl.hpp
include/utils/: RingBuffer.hpp  ThreadPool.hpp
scripts/: cpu_logger.sh  gpu_logger.sh  ram_logger.sh  socket_server.sh
src/app/: AppConfig.cpp  CMakeLists.txt  TelemetryApp.cpp
src/core/: CMakeLists.txt  LogManager.cpp  LogMessage.cpp
src/formatter/: CMakeLists.txt  LogFormatterHelper.cpp
src/logger/: CMakeLists.txt  LogManager.cpp  LogManagerBuilder.cpp  LogMessage.cpp
src/raii/: CMakeLists.txt  SafeFile.cpp  SafeSocket.cpp
src/services/: CMakeLists.txt  TelemetryServiceImpl.cpp  TelemetryServiceRunner.cpp
src/sinks/: CMakeLists.txt  ConsoleSinkImpl.cpp  FileSinkImpl.cpp  LogSinkFactory.cpp  SinkConfig.cpp
src/sources/: CMakeLists.txt  FileTelemetrySourceImpl.cpp  SocketTelemetrySourceImpl.cpp  SomeIPTelemetrySourceAdapter.cpp  SomeIPTelemetrySourceImpl.cpp
src/utils/: CMakeLists.txt  ThreadPool.cpp
